--- a/dopt/templates/index.html
+++ b/dopt/templates/index.html
@@ -13,11 +13,18 @@
         <li>例：３因子（４水準、２水準、３水準）で１０回の実験を行いたい場合、「各因子の水準数」に「4, 2, 3」、実験回数に「10」と入力してください。</li>
         <li>計算回数はデフォルトで1000ですが、計算の速さが欲しい場合には下げて、スコアの高さが欲しい場合には上げてください。</li>
     </ul>
-    <h3>計算結果の見方</h3>
+    <h3>計算結果の解釈</h3>
     <ul>
         <li>D最適性は、提案された実験計画における各因子の独立性の強さ（相関のなさ）を意味します。</li>
         <li>網羅率は、提案された実験計画が２因子間の水準の組み合わせをカバーしている割合を意味します。</li>
         <li>直交計画表では、D最適性と網羅率がどちらも100%になります。</li>
+    </ul>
+    <h3>計算方法</h3>
+    <ul>
+        <li>全実験候補からランダムに実験計画を繰り返し生成し、最もD最適性の高かったものを表示します。</li>
+        <li>D最適化は、一般線形モデルにおけるパラメータの推定量の分散を最小化することに相当します。</li>
+        <li>現在は主効果のみのモデルを想定していますが、交互作用や２乗項を入れたD最適化も可能です。</li>
+        <li>非順序的なカテゴリカル変数（りんご、みかん、バナナの３水準がある因子など）への厳密な対応は未実装です。</li>
     </ul>
 
     <hr>
